<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_fake_node</name>
  <version>2.3.2</version>
  <description>
    Package for TurtleBot3 fake node. With this package, simple tests can be done without a robot.
  </description>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <license>Apache 2.0</license>
  <url type="website">http://turtlebot3.robotis.com</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/turtlebot3_simulations</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/turtlebot3_simulations/issues</url>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author>Ryan Shim</author>
  <author email="willson@robotis.com">Will Son</author>
  <author email="kimhg@robotis.com">Hyungyu Kim</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_msgs</depend>
  <depend>turtlebot3_msgs</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <export>
    <build_type>cmake</build_type>
  </export>
</package>