<?xml version="1.0"?>
<package format="2">
  <name>turtlebot3_gazebo</name>
  <version>1.2.0</version>
  <description>
    TurtleBot3 Gazebo simulation package.
  </description>
  <maintainer email="maintainer@example.com">Maintainer Name</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>